// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a question, list of answers to pick, 'next question' and 'quit' buttons 1`] = `
<div
  className="componentContainer"
>
  <div
    className="title-large"
  >
    test
  </div>
  <div
    className="sectionSpacing"
  >
    <div
      className="title-medium-left"
    >
      Question 1
    </div>
    <div>
      test
    </div>
  </div>
  <div>
    <form
      onSubmit={[Function]}
    >
      Answers
      <div>
        <label>
          <input
            checked={false}
            className="radioInput"
            name="answer"
            onBlur={[Function]}
            onChange={[Function]}
            onDragStart={[Function]}
            onDrop={[Function]}
            onFocus={[Function]}
            type="radio"
            value="test"
          />
          test
        </label>
      </div>
      <div>
        <label>
          <input
            checked={false}
            className="radioInput"
            name="answer"
            onBlur={[Function]}
            onChange={[Function]}
            onDragStart={[Function]}
            onDrop={[Function]}
            onFocus={[Function]}
            type="radio"
            value="test2"
          />
          test2
        </label>
      </div>
      <button
        className="submit"
        data-testid="next-button"
      >
        Next Question
      </button>
      <button
        className="submit"
        data-testid="quit-button"
        onClick={[Function]}
      >
        Quit
      </button>
    </form>
  </div>
</div>
`;

exports[`should render the results 1`] = `
<div
  className="componentContainer"
>
  <div
    className="title-large"
  >
    test
  </div>
  <div
    className="sectionSpacing"
  >
    <div
      className="title-medium-left"
    >
      Question 1
    </div>
    <div>
      test
    </div>
  </div>
  <div>
    <form
      onSubmit={[Function]}
    >
      Answers
      <div>
        <label>
          <input
            checked={false}
            className="radioInput"
            name="answer"
            onBlur={[Function]}
            onChange={[Function]}
            onDragStart={[Function]}
            onDrop={[Function]}
            onFocus={[Function]}
            type="radio"
            value="test"
          />
          test
        </label>
      </div>
      <div>
        <label>
          <input
            checked={false}
            className="radioInput"
            name="answer"
            onBlur={[Function]}
            onChange={[Function]}
            onDragStart={[Function]}
            onDrop={[Function]}
            onFocus={[Function]}
            type="radio"
            value="test2"
          />
          test2
        </label>
      </div>
      <button
        className="submit"
        data-testid="next-button"
      >
        Finish
      </button>
      <button
        className="submit"
        data-testid="quit-button"
        onClick={[Function]}
      >
        Quit
      </button>
    </form>
  </div>
  <div
    className="title-large"
  >
    You scored 1 out of 2
  </div>
</div>
`;
